!HOTFIX: CORS 화이트리스트 구문 오류 수정